--- a/example/styles.css
+++ b/example/styles.css
@@ -8,16 +8,13 @@ body {
 	width: 100%;
 	height: 100%;
 	margin: 0;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
-	padding: 10%;
+	padding: 5% 25%;
 }
 
 .padding {
 	position: relative;
 	width: 100%;
-	padding-top: 66%;
+	padding-top: 75%;
 	z-index: 0;
 }
 
@@ -41,4 +38,8 @@ li {
 	display: inline-block;
 	margin: 20px 20px 0 0;
 	cursor: pointer;
+}
+
+pre {
+	font-size: 10px;
 }
