--- a/example/styles.css
+++ b/example/styles.css
@@ -5,6 +5,7 @@
 body {
 	font-family: Helvetica, sans-serif;
 	position: absolute;
+	font-size: 10px;
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -36,7 +37,7 @@ ul {
 
 li {
 	display: inline-block;
-	margin: 20px 20px 0 0;
+	margin: 10px 10px 0 0;
 	cursor: pointer;
 }
 
