--- a/example/styles.css
+++ b/example/styles.css
@@ -12,6 +12,19 @@ body {
 	padding: 5% 25%;
 }
 
+.spacer {
+	width: 100%;
+	height: 50%;
+}
+
+.wrapper {
+	position: fixed;
+	top: 5%;
+	left: 25%;
+	right: 25%;
+	bottom: 5%;
+}
+
 .padding {
 	position: relative;
 	width: 100%;
