--- a/angular-cropify.css
+++ b/angular-cropify.css
@@ -21,4 +21,5 @@
     position: absolute;
     z-index: 999;
     cursor: move;
-    border: 1px dashed rgba(255, 255, 255, 0.5); }
+    border: 1px dashed rgba(255, 255, 255, 0.5);
+    box-sizing: border-box; }
